force-app/main/default/objects/EndpointSetting__mdt/EndpointSetting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for a specific endpoint</description>
    <label>Endpoint Setting</label>
    <pluralLabel>Endpoint Settings</pluralLabel>
</CustomObject>