force-app/main/default/objects/EndpointSetting__mdt/fields/ApiVersionVariable__c.field-meta.xml
<CustomField>
    <fullName>ApiVersionVariable__c</fullName>
    <defaultValue>&quot;API_VERSION&quot;</defaultValue>
    <inlineHelpText>The variable in the endpoint URL that represents the API version</inlineHelpText>
    <label>Api Version Variable</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>