force-app/main/default/objects/EndpointSetting__mdt/fields/ConnectionSetting__c.field-meta.xml
<CustomField>
    <fullName>ConnectionSetting__c</fullName>
    <inlineHelpText>The connection setting for this endpoint</inlineHelpText>
    <label>Connection Setting</label>
    <referenceTo>ConnectionSetting__mdt</referenceTo>
    <relationshipLabel>Endpoint Settings</relationshipLabel>
    <relationshipName>EndpointSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>