force-app/main/default/objects/EndpointSetting__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <defaultValue>&quot;NOT_REQUIRED&quot;</defaultValue>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_REQUIRED</fullName>
                <default>true</default>
                <label>NOT_REQUIRED</label>
            </value>
            <value>
                <fullName>application/vnd.api+json</fullName>
            </value>
            <value>
                <fullName>application/json</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>