force-app/main/default/objects/EndpointSetting__mdt/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <defaultValue>&quot;https://FIRM_URL.addepar.com/api/API_VERSION/entity_types&quot;</defaultValue>
    <label>Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>