force-app/main/default/objects/EndpointSetting__mdt/fields/FirmUrlVariable__c.field-meta.xml
<CustomField>
    <fullName>FirmUrlVariable__c</fullName>
    <defaultValue>&quot;FIRM_URL&quot;</defaultValue>
    <inlineHelpText>The variable string in the Endpoint URL that represents the firms domain at Addepar.</inlineHelpText>
    <label>Firm Url Variable</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>